add endpoint GET /api/v1/transactions/wallet
