# internal/model/transaction.go
@@ -1,6 +1,8 @@
 package model
 
 import (
+	"time"
+
 	"github.com/google/uuid"
 	"github.com/shopspring/decimal"
 )
@@ -17,4 +19,21 @@ type CreateWithdrawTransactionRequest struct {
 
 type CreateTransactionResponse struct {
 	TransactionID string `json:"transaction_id"`
+}
+
+type GetTransactionResponse struct {
+	ID              uuid.UUID                   `json:"id"`
+	UserID          uuid.UUID                   `json:"user_id"`
+	TransactionType string                      `json:"transaction_type"`
+	Status          string                      `json:"status"`
+	TotalAmount     decimal.Decimal             `json:"total_amount"`
+	CreatedAt       time.Time                   `json:"created_at"`
+	UpdatedAt       time.Time                   `json:"updated_at"`
+	Details         []TransactionDetailResponse `json:"details,omitempty"`
+}
+
+type TransactionDetailResponse struct {
+	ID        uuid.UUID `json:"id"`
+	ProductID uuid.UUID `json:"product_id"`
+	Qty       int       `json:"qty"`
 }
